# django-based-template-tutor-

./: README.md  db.sqlite3  putData.py  pyproject.toml  requirements.txt
hello/: 100 days of code (python)webdata.json  Data.json  admin.py  data.json  data.py  dsa course.json  models.py  sample.json  urls.py  views.py  webdata.json  webdataDsa (3).json
hello/Data/: Data.py
hello/migrations/: 0001_initial.py  0002_auto_20210929_1016.py  0003_auto_20220112_1834.py
hello/templates/hello/: boot.html  chapters (copy) 1.html  chapters (copy).html  chapters1.html  courses.html  display.html  index.html
hello/templates/login/: layout.html  login.html
mysite/: settings.py  urls.py
